complete shipment confirm
